--- a/styles/global.css
+++ b/styles/global.css
@@ -19,4 +19,40 @@ html {
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
+
+/* 1rem = 16px (User Agent) = 100% (User Agent) */
+    font-size: 62.5% /* 10px */
+
 }
+
+body {
+    height: 100vh;
+    background: var (--background);
+}
+
+body, button, input, textarea{
+    /* intervalo de tamanho */
+    font-size: clamp(14px, 1.6rem, 2vw);
+
+    font-family: 'Open-Sans', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+}
+
+.content{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.sr-only{
+    position: absolute;
+    height: 1px;
+    width: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip-path: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+
