--- a/styles/room.css
+++ b/styles/room.css
@@ -103,5 +103,24 @@
     align-items: center;
 }
 
+.question-wrapper .question-content p{
+    margin-left: 1.6rem;
+}
+.question-wrapper .actions{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
 
+.question-wrapper .actions > a{
+    display: flex;
+    align-items: center;
+}
 
+.question-wrapper .actions > a > img{
+    margin-right: .8rem;
+}
+
+.question-wrapper .actions > a{
+    margin-left: 2.4rem;
+}
