--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,7 @@ html {
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
+    --grey-medium: #eaecf2; 
 
 /* 1rem = 16px (User Agent) = 100% (User Agent) */
     font-size: 62.5% /* 10px */
