Add new color for question-read and a new grid

--- a/styles/room.css
+++ b/styles/room.css
@@ -136,3 +136,12 @@
 .question-wrapper.read{
     background: var(--grey-medium);
 }
+
+.question-wrapper.read{
+    background: var(--grey-medium);
+}
+
+.question-wrapper.read .question-content{
+    background: var(--grey-blue);
+}
+
